# cmd/api/main.go
@@ -6,6 +6,9 @@ import (
 	"net/http"
 	"time"
 
+	_ "github.com/fernandodr19/mybank-acc/docs/swagger"
+	_ "github.com/joho/godotenv/autoload"
+
 	app "github.com/fernandodr19/mybank-acc/pkg"
 	"github.com/fernandodr19/mybank-acc/pkg/config"
 	"github.com/fernandodr19/mybank-acc/pkg/gateway/api"
@@ -16,6 +19,14 @@ import (
 	"google.golang.org/grpc"
 )
 
+// @title Swagger Mybank API
+// @version 1.0
+// @host localhost:3000
+// @basePath /api/v1
+// @schemes http
+// @license.name MIT
+// @license.url https://opensource.org/licenses/MIT
+// @description Documentation Mybank API
 func main() {
 	log := logger.Default()
 	log.Infoln("=== My Bank ACC ===")
