# docs/swagger/swagger.json
@@ -1,9 +1,20 @@
 {
+    "schemes": [
+        "http"
+    ],
     "swagger": "2.0",
     "info": {
+        "description": "Documentation Mybank API",
+        "title": "Swagger Mybank API",
         "contact": {},
-        "license": {}
+        "license": {
+            "name": "MIT",
+            "url": "https://opensource.org/licenses/MIT"
+        },
+        "version": "1.0"
     },
+    "host": "localhost:3000",
+    "basePath": "/api/v1",
     "paths": {
         "/accounts": {
             "post": {
